API_Reference/milvus-sdk-node/v2.5.x/Management/compact.md
# compact()

This operation compacts and merges small segments into a larger one to save memory usage and improve search performance.

```javascript
compact(data): Promise<CompactionResponse>
```

## Request Syntax

```javascript
milvusClient.compact()
```

**PARAMETERS:**

- **collection_name** (*str*) -

    **&#91;REQUIRED&#93;**

    The name of the target collection to reassign an alias to.

- **timeout** (*number*)  

    The timeout duration for this operation. 

    Setting this to **None** indicates that this operation timeouts when any response arrives or any error occurs.

**RETURNS** *Promise\&lt;CompactionResponse&gt;*

This method returns a promise that resolves to a *CompactionResponse* object.

```javascript
{
    compactionID: string,
    status: {
        code: number,
        error_code: string | number,
        reason: string
    }
}
```

**PARAMETERS:**

- **compactionID** (*number*) -

    Compaction task ID.

- **status** (*ResStatus*) - 

    - **code** (*number*) -

        A code that indicates the operation result. It remains **0** if this operation succeeds.

    - **error_code** (*string* | *number*) -

        An error code that indicates an occurred error. It remains **Success** if this operation succeeds. 

    - **reason** (*string*) - 

        The reason that indicates the reason for the reported error. It remains an empty string if this operation succeeds.

## Example

```java
const milvusClient = new milvusClient(MILUVS_ADDRESS);
 const resStatus = await milvusClient.compact({
      collection_name: 'my_collection',
 });
```

